--- a/BlogApp.API/Monitoring/Prometheus.yml
+++ b/BlogApp.API/Monitoring/Prometheus.yml
@@ -6,5 +6,5 @@ scrape_configs:
     metrics_path: /metrics
     static_configs:
       - targets: ['blogapp.api:80']   # for docker use
-      - targets: ['localhost:5000']   # for without docker use
+      #- targets: ['localhost:5000']   # for without docker use
   
