--- a/BlogApp.API/appsettings.Development.json
+++ b/BlogApp.API/appsettings.Development.json
@@ -36,12 +36,15 @@
     "WriteTo": [
       { "Name": "Console" },
       {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/log-.txt",
-          "rollingInterval": "Day"
-        }
+        //"Name": "File",
+        //"Args": {
+        //  "path": "Logs/log-.txt",
+        //  "rollingInterval": "Day"
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://seq:5341" }
       }
-    ]
+      
+    ],
+    "Enrich": [ "FromLogContext" ]
   }
 }
