--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,9 +2,43 @@ services:
   blogapp.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - Serilog__WriteTo__1__Name=Seq
+      - Serilog__WriteTo__1__Args__serverUrl=http://seq:5341
     depends_on:
       - mongo
       - redis
+      - prometheus
+      - grafana
+      - jaeger
+      - seq
     ports:
-      - "8080:8080"   # Host:Container
+      - "8080:8080"
       - "8081:8081"
+
+  prometheus:
+    image: prom/prometheus:latest
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:9.5
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+
+  jaeger:
+    image: jaegertracing/all-in-one:1.47
+    ports:
+      - "16686:16686"   # Jaeger UI
+      - "6831:6831/udp" # Jaeger agent
+      - "14268:14268"   # Jaeger collector endpoint
+
+  seq:
+    image: datalust/seq:latest
+    ports:
+      - "5341:80"
+    environment:
+      - ACCEPT_EULA=Y
