--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,9 @@ services:
     container_name: jaeger
     ports:
       - "16686:16686"   # Jaeger UI
-      - "6831:6831/udp" # Jaeger agent (OTLP/UDP)
+      - "6831:6831/udp" # Legacy agent
+      - "4317:4317"     # OTLP gRPC
+      - "4318:4318"     # OTLP HTTP
 
   seq:
     image: datalust/seq:latest
