--- a/BlogApp.API/Dockerfile
+++ b/BlogApp.API/Dockerfile
@@ -1,10 +1,11 @@
 # Base runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
 
-# Build stage
+# Align ports with Docker Compose mapping
+EXPOSE 80
+EXPOSE 443
+
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
@@ -14,18 +15,14 @@ COPY . .
 WORKDIR "/src/BlogApp.API"
 RUN dotnet build "./BlogApp.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# Publish stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./BlogApp.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# Final stage
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 
-# Run as non-root user (safe practice) - optional
-# Create user if needed
 RUN adduser --disabled-password --gecos "" appuser && chown -R appuser /app
 USER appuser
 
